--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
         <p>
           What we really need is to get outside...in fact SLEEP outside. Our
           mission is to provide you with everything you need to do this
-          comfortably at an affordable price.
+          comfortably at an <a href="product_pages/cedar-ridge-rimrock-2.html">price</a>.
         </p>
       </section>
       <section class="products">
