--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
         </div>
       </div>
       <section class="mission">
-        <p>We spend too much time these days indoors...sitting usually.</p>
+        <p>We spend tooo much time these days indoors...sitting usually.</p>
         <p>No wonder we are a mess!</p>
         <p>
           What we really need is to get outside...in fact SLEEP outside. Our
