--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -14,13 +14,8 @@
   </head>
 
   <body>
-    <header class="divider" id="main-header">
-      
-    </header>
-    <main class="divider">
-
-    </main>
-    
+    <header class="divider" id="main-header"></header>
+    <main class="divider"></main>
 
     <footer id="main-footer"></footer>
   </body>
