--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <main class="divider">
       <div class="hero">
         <img
-          src="public/images/banner-sm.jpg"
+          src="/images/banner-sm.jpg"
           srcset="public/images/banner-sm.jpg 500w, public/images/banner.jpg"
           alt="image of a high mountain lake"
         />
