Update return in porductDetailsTemplate

--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -6,7 +6,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Sleep Outside | Marmot Ajax 3 person tent</title>
+    <title>Sleep Outside | Product</title>
 
     <link rel="stylesheet" href="../css/style.css" />
 
@@ -15,6 +15,7 @@
 
   <body>
     <header class="divider" id="main-header"></header>
+    
     <main class="divider"></main>
 
     <footer id="main-footer"></footer>
