completed remove item from cart and product search tasks - Rama

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>Sleep Outside | Home</title>
     <link rel="stylesheet" href="./css/style.css" />
     <script src="./js/main.js" type="module"></script>
+    <script src="./js/product-search.js" type="module" defer></script>
   </head>
   <body>
     <header class="divider" id="main-header"></header>
@@ -72,5 +73,6 @@
       </section>
     </main>
     <footer id="main-footer"></footer>
+    
   </body>
 </html>
