--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -18,14 +18,21 @@
   <header class="divider" id="main-header"></header>
 
   <main class="divider">
-    <section class="products">
-      <h2>My Cart</h2>
-
-      <ul class="product-list">
-      </ul>
-    </section>
-    <div class="cart-footer hide">
-      <p class="cart-total"></p>
+    <div>
+      <form action="/checkout/index.html" method="post">
+        <section class="products">
+          <h2>My Cart</h2>
+    
+          <ul class="product-list">
+          </ul>
+        </section>
+        <div class="cart-footer hide">
+          <p class="cart-total"></p>
+        </div>
+        <div>
+          <button type="submit" id="checkout">Checkout</button>
+        </div>
+      </form>
     </div>
   </main>
 
