--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -18,22 +18,15 @@
   <header class="divider" id="main-header"></header>
 
   <main class="divider">
-    <div>
-      <form action="/checkout/index.html" method="post">
-        <section class="products">
-          <h2>My Cart</h2>
-    
-          <ul class="product-list">
-          </ul>
-        </section>
-        <div class="cart-footer hide">
-          <p class="cart-total"></p>
+    <section class="products">
+      <h2>My Cart</h2>
+
+        <ul class="product-list"></ul>
+        <div class="list-footer hide">
+          <a href="/checkout/index.html">Checkout</a>
+          <p class="cart-total">Total:</p>
         </div>
-        <div>
-          <button type="submit" id="checkout">Checkout</button>
-        </div>
-      </form>
-    </div>
+    </section>
   </main>
 
   <footer id="main-footer"></footer>
