--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -15,10 +15,12 @@
   <body>
     <header class="divider" id="main-header"></header>
 
-    <main class="divider">
+    <main class="divider main-content">
       <section class="products">
         <h2>Review & Place your Order</h2>
       </section>
+
+      <div id="orderPlacementMessage"></div>
 
       <form name="checkout">
         <fieldset>
