--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -20,7 +20,7 @@
         <h2>Review & Place your Order</h2>
       </section>
 
-      <div id="orderPlacementMessage"></div>
+      <div id="orderPlacementMessage" class="error-message"></div>
 
       <form name="checkout">
         <fieldset>
