--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -15,10 +15,9 @@
   <body>
     <header class="divider" id="main-header"></header>
 
-    <main class="divider main-content">
-      <section class="products">
+    <main class="divider checkout">
         <h2>Review & Place your Order</h2>
-      </section>
+        <section class="products">
 
       <div id="orderPlacementMessage" class="error-message"></div>
 
