--- a/src/product-listing/index.html
+++ b/src/product-listing/index.html
@@ -14,7 +14,7 @@
     </header>
     <!-- The Breadcrumb -->
     <nav class="breadcrumb" id="categoryBreadcrumb">
-      <a href="/">Home</a> > <span id="categoryLink">Categories</span> > Product Listing
+      <a href="/">Home</a> > <span id="categoryLink">Categories</span> > <span id="qtyItems">Qty</span>
     </nav>
     <main class="divider">
       <section class="products">
