--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -15,6 +15,10 @@
 
   <body>
     <header class="divider" id="main-header"></header>
+    <!-- The Breadcrumb -->
+    <nav class="breadcrumb" id="categoryBreadcrumb">
+      <a href="/">Home</a> > <span class="categoryLink"></span> 
+    </nav>
     
     <main class="divider"></main>
 
