--- a/src/product-listing/index.html
+++ b/src/product-listing/index.html
@@ -8,7 +8,14 @@
     <script src="../js/product-listing.js" type="module"></script>
   </head>
   <body>
-    <header class="divider" id="main-header"></header>
+    <header class="divider" id="main-header">
+      
+
+    </header>
+    <!-- The Breadcrumb -->
+    <nav class="breadcrumb" id="categoryBreadcrumb">
+      <a href="/">Home</a> > <span id="categoryLink">Categories</span> > <span id="qtyItems">Qty</span>
+    </nav>
     <main class="divider">
       <section class="products">
         <h2>Top Products <span class="title"></span></h2>
