--- a/src/product-listing/index.html
+++ b/src/product-listing/index.html
@@ -8,13 +8,11 @@
     <script src="../js/product-listing.js" type="module"></script>
   </head>
   <body>
-    <header class="divider" id="main-header">
-      
-
-    </header>
+    <header class="divider" id="main-header"></header>
     <!-- The Breadcrumb -->
     <nav class="breadcrumb" id="categoryBreadcrumb">
-      <a href="/">Home</a> > <span id="categoryLink">Categories</span> > <span id="qtyItems">Qty</span>
+      <a href="/">Home</a> > <span id="categoryLink">Categories</span> >
+      <span id="qtyItems">Qty</span>
     </nav>
     <main class="divider">
       <section class="products">
