--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Orders | Order History</title>
+  <title>Orders | Find Order</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css" />
   <script src="./js/main.js" type="module"></script>
 </head>
@@ -13,7 +18,7 @@
   <header class="divider" id="main-header"></header>
   <div class="container">
     <h1>Order Search</h1>
-    
+
     <div>
       <label for="orderIdInput">Enter Order ID (Existing orders 1 to 50):</label>
       <input type="text" id="orderIdInput" placeholder="Enter order ID...">
